--- a/BankExam/admin/package.json
+++ b/BankExam/admin/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
     "node-sass": "^4.14.0",
     "reset-css": "^5.0.1",
+    "router.js": "^1.0.3",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
